feat(specialization): add specializations and its seed
